--- a/subworkflows/nf-core/multiple_impute_glimpse2/meta.yml
+++ b/subworkflows/nf-core/multiple_impute_glimpse2/meta.yml
@@ -39,6 +39,8 @@ input:
         Reference genome in fasta format.
         Reference genome index in fai format
         Structure: [ meta, fasta, fai ]
+  - chunk_model:
+      description: ""
 output:
   - chunk_chr:
       type: file
