--- a/subworkflows/nf-core/deepvariant/meta.yml
+++ b/subworkflows/nf-core/deepvariant/meta.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: deepvariant
-description: DeepVariant is an analysis pipeline that uses a deep neural network to call genetic variants from next-generation DNA sequencing data
+description: DeepVariant is an analysis pipeline that uses a deep neural network to
+  call genetic variants from next-generation DNA sequencing data
 keywords:
   - variant calling
   - machine learning
