--- a/subworkflows/nf-core/homer/groseq/meta.yml
+++ b/subworkflows/nf-core/homer/groseq/meta.yml
@@ -1,5 +1,7 @@
 name: homer_groseq
-description: Perform variant calling on a set of normal samples using mutect2 panel of normals mode. Group them into a genomicsdbworkspace using genomicsdbimport, then use this to create a panel of normals using createsomaticpanelofnormals.
+description: Perform variant calling on a set of normal samples using mutect2 panel
+  of normals mode. Group them into a genomicsdbworkspace using genomicsdbimport, then
+  use this to create a panel of normals using createsomaticpanelofnormals.
 keywords:
   - homer
   - groseq
@@ -10,28 +12,17 @@ components:
   - homer/findpeaks
   - homer/pos2bed
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
-  - input:
-      type: list
-      description: list of BAM files, also able to take SAM and BED as input
-      pattern: "[ *.{bam/sam/bed} ]"
   - fasta:
       type: file
       description: The reference fasta file
       pattern: "*.fasta"
+  - bam:
+      description: ""
 output:
   - tagdir:
       type: directory
       description: The "Tag Directory"
       pattern: "*_tagdir"
-  - bedGraph:
-      type: file
-      description: The UCSC bed graph
-      pattern: "*.bedGraph.gz"
   - peaks:
       type: file
       description: The found peaks
@@ -44,6 +35,8 @@ output:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
+  - bed_graph:
+      description: ""
 authors:
   - "@edmundmiller"
 maintainers:
