feat(homer): Add uniqmap to findpeaks

--- a/subworkflows/nf-core/homer_groseq/meta.yml
+++ b/subworkflows/nf-core/homer_groseq/meta.yml
@@ -23,6 +23,10 @@ input:
       type: file
       description: The reference fasta file
       pattern: "*.fasta"
+  - uniqmap:
+      type: file
+      description: HOMER uniqmap
+      pattern: "*.zip"
 output:
   - tagdir:
       type: directory
