--- a/modules/nf-core/homer/findpeaks/meta.yml
+++ b/modules/nf-core/homer/findpeaks/meta.yml
@@ -24,6 +24,10 @@ input:
         type: directory
         description: "The 'Tag Directory'"
         pattern: "tagDir"
+    - tagDir:
+        type: directory
+        description: "(directory of binary files specifying uniquely mappable locations) Download from http://biowhat.ucsd.edu/homer/groseq/"
+        pattern: "uniqmap/"
 output:
   - txt:
       - meta:
