--- a/modules/nf-core/homer/findpeaks/environment.yml
+++ b/modules/nf-core/homer/findpeaks/environment.yml
@@ -2,4 +2,10 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - bioconda::homer=4.11=pl526hc9558a2_3
+  # renovate: datasource=conda depName=bioconda/homer
+  - bioconda::homer=4.11
+  - wget
+  - samtools
+  - r-essentials
+  - bioconductor-deseq2
+  - bioconductor-edger
