--- a/modules/nf-core/homer/maketagdirectory/environment.yml
+++ b/modules/nf-core/homer/maketagdirectory/environment.yml
@@ -1,11 +1,11 @@
 channels:
   - conda-forge
   - bioconda
-
 dependencies:
-  - bioconda::bioconductor-deseq2=1.30.0
-  - bioconda::bioconductor-edger=3.32.0
+  # renovate: datasource=conda depName=bioconda/homer
   - bioconda::homer=4.11
-  - bioconda::samtools=1.11
-  - conda-forge::perl=5.26.2
-  - conda-forge::r-base=4.0.2
+  - wget
+  - samtools
+  - r-essentials
+  - bioconductor-deseq2
+  - bioconductor-edger
