--- a/modules/nf-core/homer/pos2bed/environment.yml
+++ b/modules/nf-core/homer/pos2bed/environment.yml
@@ -2,4 +2,10 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=bioconda/homer
   - bioconda::homer=4.11
+  - wget
+  - samtools
+  - r-essentials
+  - bioconductor-deseq2
+  - bioconductor-edger
