test: Add -single flag
Makes the test slow

--- a/subworkflows/nf-core/homer_groseq/tests/bed.config
+++ b/subworkflows/nf-core/homer_groseq/tests/bed.config
@@ -1,5 +1,5 @@
 process {
     withName: 'HOMER_GROSEQ:HOMER_MAKETAGDIRECTORY' {
-        ext.args = "-checkGC -format bed"
+        ext.args = "-checkGC -format bed -single"
     }
 }
