--- a/subworkflows/nf-core/homer_groseq/meta.yml
+++ b/subworkflows/nf-core/homer_groseq/meta.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: homer_groseq
-description: Basic process of trying to analyze GRO-Seq data with HOMER. From the [GRO-Seq Analysis Tutorial](http://homer.ucsd.edu/homer/ngs/groseq/groseq.html).
+description: Basic process of trying to analyze GRO-Seq data with HOMER. From the
+  [GRO-Seq Analysis Tutorial](http://homer.ucsd.edu/homer/ngs/groseq/groseq.html).
 keywords:
   - homer
   - groseq
@@ -12,13 +13,7 @@ components:
   - homer/findpeaks
   - homer/pos2bed
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
-  - input:
-      type: list
+  - bam:
       description: list of BAM files, also able to take SAM and BED as input
       pattern: "[ *.{bam/sam/bed} ]"
   - fasta:
@@ -34,7 +29,7 @@ output:
       type: directory
       description: The "Tag Directory"
       pattern: "*_tagdir"
-  - bedGraph:
+  - bed_graph:
       type: file
       description: The UCSC bed graph
       pattern: "*.bedGraph.gz"
