--- a/subworkflows/nf-core/fasta_gxf_busco_plot/meta.yml
+++ b/subworkflows/nf-core/fasta_gxf_busco_plot/meta.yml
@@ -64,6 +64,12 @@ output:
         Channel containing BUSCO short summaries corresponding to fasta files
         Structure: [ val(meta), json ]
       pattern: "*.json"
+  - assembly_full_table:
+      description: |
+        Channel containing complete results in a tabular format with scores and lengths of BUSCO matches,
+        and coordinates (for genome mode) or gene/protein IDs (for transcriptome or protein modes)
+        Structure: [ val(meta), tsv ]
+      pattern: "*.tsv"
   - assembly_plot_summary_txt:
       type: file
       description: |
@@ -94,6 +100,12 @@ output:
         Channel containing BUSCO short summaries corresponding to annotation files
         Structure: [ val(meta), json ]
       pattern: "*.json"
+  - annotation_full_table:
+      description: |
+        Channel containing complete results in a tabular format with scores and lengths of BUSCO matches,
+        protein IDs in protein mode
+        Structure: [ val(meta), tsv ]
+      pattern: "*.tsv"
   - annotation_plot_summary_txt:
       type: file
       description: |
@@ -116,3 +128,4 @@ authors:
   - "@GallVp"
 maintainers:
   - "@GallVp"
+  - "@FernandoDuarteF"
