--- a/modules/nf-core/homer/maketagdirectory/environment.yml
+++ b/modules/nf-core/homer/maketagdirectory/environment.yml
@@ -2,10 +2,10 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - bioconda::bioconductor-deseq2=1.42.0
+  - bioconda::bioconductor-edger=4.0.16
   # renovate: datasource=conda depName=bioconda/homer
   - bioconda::homer=4.11
-  - wget
-  - samtools
-  - r-essentials
-  - bioconductor-deseq2
-  - bioconductor-edger
+  - bioconda::samtools=1.21
+  - conda-forge::r-essentials=4.3
+  - conda-forge::wget=1.21.4
