Plink exclude migration to nf-test

--- a/modules/nf-core/plink/exclude/tests/nextflow.config
+++ b/modules/nf-core/plink/exclude/tests/nextflow.config
@@ -1,9 +1,6 @@
 process {
-
-    publishDir = { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" }
-
     withName: PLINK_VCF {
-        ext.args = '--make-bed --set-missing-var-ids @:#:\\$1:\\$2'
+        ext.args = params.plink_vcf_args
     }
 
     withName: GAWK {
@@ -13,7 +10,4 @@ process {
     withName: PLINK_EXCLUDE {
         ext.prefix = {"${meta.id}_excluded"}
     }
-
 }
-
-
