Fix output formatting

--- a/modules/nf-core/sylph/sketch/meta.yml
+++ b/modules/nf-core/sylph/sketch/meta.yml
@@ -42,7 +42,8 @@ output:
         type: file
         description: Sylph database file
         pattern: "*.syldb"
-    - versions:
+  - versions:
+    - versions.yml:
         type: file
         description: File containing software versions
         pattern: "versions.yml"
