run on github runners again

--- a/.github/workflows/gpu-tests.yml
+++ b/.github/workflows/gpu-tests.yml
@@ -40,7 +40,7 @@ env:
 jobs:
   nf-test-changes:
     name: nf-test-changes
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       # Expose detected tags as 'modules' and 'workflows' output variables
       paths: ${{ steps.outputs.outputs.components }}
