--- a/.github/workflows/gpu-tests.yml
+++ b/.github/workflows/gpu-tests.yml
@@ -46,7 +46,7 @@ jobs:
       paths: ${{ steps.outputs.outputs.components }}
       modules: ${{ steps.outputs.outputs.modules }}
       subworkflows: ${{ steps.outputs.outputs.subworkflows}}
-      changes: ${{ steps.outputs.outputs.commponents != '' }}
+      changes: ${{ steps.outputs.outputs.changes }}
       # Prod for version bumping
     steps:
       - name: Clean Workspace # Purge the workspace in case it's running on a self-hosted runner
@@ -73,11 +73,13 @@ jobs:
         run: |
           echo modules=$(echo '${{ steps.list.outputs.components }}' | jq -c '. | map(select(contains("modules"))) | map(gsub("modules/nf-core/"; ""))') >> $GITHUB_OUTPUT
           echo subworkflows=$(echo '${{ steps.list.outputs.components }}' | jq '. | map(select(contains("subworkflows"))) | map(gsub("subworkflows/nf-core/"; ""))') >> $GITHUB_OUTPUT
+          echo changes=$(echo '${{ steps.list.outputs.components }}' | jq '. | length') >> $GITHUB_OUTPUT
       - name: debug
         run: |
           echo ${{ steps.outputs.outputs.components }}
           echo ${{ steps.outputs.outputs.modules }}
           echo ${{ steps.outputs.outputs.subworkflows }}
+          echo ${{ steps.outputs.outputs.changes }}
 
   nf-test-gpu:
     runs-on: "gpu"
