--- a/modules/nf-core/coptr/merge/meta.yml
+++ b/modules/nf-core/coptr/merge/meta.yml
@@ -1,7 +1,7 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "coptr_merge"
-description: Merge reads that were mapped to multiple indeces
+description: Merge reads that were mapped to multiple indices
 keywords:
   - coptr
   - mapping
