--- a/modules/nf-core/coptr/merge/meta.yml
+++ b/modules/nf-core/coptr/merge/meta.yml
@@ -26,7 +26,7 @@ input:
           e.g. `[ id:'sample1', single_end:false ]`
     - bams:
         type: file
-        description: bam files to merge. Assumes that the reads were mapped to different indeces.
+        description: bam files to merge. Assumes that the reads were mapped to different indices.
         pattern: "*.bam"
         ontologies:
           - edam: "http://edamontology.org/format_2572"
