--- a/subworkflows/nf-core/homer_groseq/meta.yml
+++ b/subworkflows/nf-core/homer_groseq/meta.yml
@@ -1,34 +1,35 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: homer_groseq
-description: Perform variant calling on a set of normal samples using mutect2 panel of normals mode. Group them into a genomicsdbworkspace using genomicsdbimport, then use this to create a panel of normals using createsomaticpanelofnormals.
+description: Basic process of trying to analyze GRO-Seq data with HOMER. From the
+  [GRO-Seq Analysis Tutorial](http://homer.ucsd.edu/homer/ngs/groseq/groseq.html).
 keywords:
   - homer
   - groseq
   - nascent
 components:
+  - unzip
   - homer/maketagdirectory
   - homer/makeucscfile
   - homer/findpeaks
   - homer/pos2bed
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
-  - input:
-      type: list
+  - bam:
       description: list of BAM files, also able to take SAM and BED as input
       pattern: "[ *.{bam/sam/bed} ]"
   - fasta:
       type: file
       description: The reference fasta file
       pattern: "*.fasta"
+  - uniqmap:
+      type: file
+      description: Optional HOMER uniqmap
+      pattern: "*.zip"
 output:
   - tagdir:
       type: directory
       description: The "Tag Directory"
       pattern: "*_tagdir"
-  - bedGraph:
+  - bed_graph:
       type: file
       description: The UCSC bed graph
       pattern: "*.bedGraph.gz"
