--- a/modules/nf-core/malt/run/tests/nextflow.config
+++ b/modules/nf-core/malt/run/tests/nextflow.config
@@ -7,7 +7,7 @@ process {
     }
 
     withName: MALT_BUILD {
-        ext.args = "--sequenceType DNA"
+        ext.args = params.module_args
     }
 
 }
