--- a/modules/nf-core/malt/run/tests/nextflow.config
+++ b/modules/nf-core/malt/run/tests/nextflow.config
@@ -1,13 +1,12 @@
 process {
 
+    withName: MALT_BUILD {
+        ext.args = "-J-Xmx6G --sequenceType DNA"
+        memory   = 12.GB
+    }
 
     withName: MALT_RUN {
         ext.args = "-m BlastN -J-Xmx8G -a . -f SAM"
-        memory = 12.GB
+        memory   = 12.GB
     }
-
-    withName: MALT_BUILD {
-        ext.args = params.module_args
-    }
-
 }
