--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,15 @@ repos:
         files: environment
         types: [yaml]
         additional_dependencies: ["ruamel.yaml"]
+  - repo: local
+    hooks:
+      - id: conda-env-renovate-comments
+        name: Checks and adds comments to dependancies for renovate
+        entry: ./.github/scripts/renovate_env_comments.py
+        language: python
+        files: environment
+        types: [yaml]
+        additional_dependencies: ["ruamel.yaml"]
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: "v3.1.0"
     hooks:
