Address review comments

--- a/modules/nf-core/gunc/run/meta.yml
+++ b/modules/nf-core/gunc/run/meta.yml
@@ -24,7 +24,7 @@ input:
           e.g. [ id:'test', single_end:false ]
     - fasta_files:
         type: file
-        description: FASTA file containing contig (bins)
+        description: A list of FASTA files containing contig (bins)
         pattern: "*.fa"
   - - db:
         type: file
