--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,15 @@ repos:
         files: environment
         types: [yaml]
         additional_dependencies: ["ruamel.yaml"]
+  - repo: local
+    hooks:
+      - id: check-version-snapshot
+        name: Versions are captured not hashed
+        entry: ./.github/scripts/check_version_snapshot.py
+        language: python
+        files: \.nf\.test$
+        types: [file]
+        additional_dependencies: []
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: "v3.1.0"
     hooks:
