Set args in nextflow.config again

--- a/modules/nf-core/gunc/mergecheckm/tests/nextflow.config
+++ b/modules/nf-core/gunc/mergecheckm/tests/nextflow.config
@@ -1,5 +1,5 @@
 process {
-  withName: CHECKM_QA {
-    ext.args = params.module_args
-  }
+    withName: CHECKM_QA {
+        ext.args = '--tab_table'
+    }
 }
