[propr/propd] fix bug when defining the test configs

--- a/modules/nf-core/propr/propd/tests/default.config
+++ b/modules/nf-core/propr/propd/tests/default.config
@@ -1,5 +1,5 @@
 process {
     withName: 'PROPR_PROPD' {
-        ext.args = ["--round_digits 5"]
+        ext.args = {"--round_digits 5"}
     }
 }
