update meta info

--- a/modules/nf-core/nacho/normalise/meta.yml
+++ b/modules/nf-core/nacho/normalise/meta.yml
@@ -1,58 +1,64 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
-name: "nacho_normalise"
-## TODO nf-core: Add a description of the module and list keywords
-description: write your description here
+name: nacho_normalise
+description: |
+  NACHO (NAnostring quality Control dasHbOard) is developed for NanoString nCounter data.
+  NanoString nCounter data is a messenger-RNA/micro-RNA (mRNA/miRNA) expression assay and works with fluorescent barcodes.
+  Each barcode is assigned a mRNA/miRNA, which can be counted after bonding with its target.
+  As a result each count of a specific barcode represents the presence of its target mRNA/miRNA.
 keywords:
-  - sort
-  - example
-  - genomics
+  - nacho
+  - nanostring
+  - mRNA
+  - miRNA
+  - qc
 tools:
-  - "nacho":
-      ## TODO nf-core: Add a description and other details for the software below
-      description: ""
-      homepage: ""
-      documentation: ""
-      tool_dev_url: ""
-      doi: ""
-      licence: 
-      identifier: biotools:NACHO
+  - NACHO:
+      description: |
+        R package that uses two main functions to summarize and visualize NanoString RCC files,
+        namely: `load_rcc()` and `visualise()`. It also includes a function `normalise()`, which (re)calculates
+        sample specific size factors and normalises the data.
+        For more information `vignette("NACHO")` and `vignette("NACHO-analysis")`
+      homepage: https://github.com/mcanouil/NACHO
+      documentation: https://cran.r-project.org/web/packages/NACHO/vignettes/NACHO.html
+      doi: "doi:10.1093/bioinformatics/btz647"
+      licence: GPL-3.0 license
+      identifier: biotools:nacho
 
-## TODO nf-core: Add a description of all of the variables used as input
 input:
-  #
-  ## TODO nf-core: Delete / customise this example input
-    - bam:
-        type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
+  - - rcc_files:
+      type: file
+      description: |
+        List of RCC files for all samples, which are direct outputs from NanoString runs
+      pattern: "*.RCC"
+  - - sample_sheet:
+      type: "file"
+      pattern: "*.csv"
+      description: |
+        Comma-separated file with 3 columns: RCC_FILE, RCC_FILE_NAME, and SAMPLE_ID
 
-## TODO nf-core: Add a description of all of the variables used as output
 output:
-  - bam:
-  #
-  ## TODO nf-core: Delete / customise this example output
-    - "*.bam":
+  - normalized_counts:
+    - "normalized_counts.tsv":
         type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
+        description: |
+          Tab-separated file with gene normalized counts for the samples
+        pattern: "*normalized_counts.tsv"
+
+  - normalized_counts_wo_HK:
+    - "normalized_counts_wo_HKnorm.tsv":
+        type: file
+        description: |
+          Tab-separated file with gene normalized counts for the samples, without housekeeping genes.
+        pattern: "*normalized_counts_wo_HKnorm.tsv"
   - versions:
     - "versions.yml":
         type: file
-        description: File containing software versions
+        description: |
+          File containing software versions
         pattern: "versions.yml"
 
 authors:
-  - "@alanmmobbs93"
+  - Mickaël Canouil, Gerard A. Bouland, Amélie Bonnefond, Philippe Froguel, Leen Hart, and Roderick Slieker.
 maintainers:
-  - "@alanmmobbs93"
+  -
