--- a/modules/nf-core/cnvkit/batch/environment.yml
+++ b/modules/nf-core/cnvkit/batch/environment.yml
@@ -4,5 +4,10 @@ channels:
 
 dependencies:
   - bioconda::cnvkit=0.9.10
-  - bioconda::htslib=1.17 # Matched with the container
-  - bioconda::samtools=1.17 # Matched with the container
+  # renovate: datasource=conda depName=bioconda/htslib
+  - bioconda::htslib=1.17
+  # renovate: datasource=conda depName=bioconda/samtools
+  - bioconda::samtools=1.17
+
+# pipelines:
+#  - sarek
