--- a/modules/nf-core/samblaster/environment.yml
+++ b/modules/nf-core/samblaster/environment.yml
@@ -6,3 +6,6 @@ dependencies:
   - bioconda::htslib=1.19.1
   - bioconda::samblaster=0.1.26
   - bioconda::samtools=1.19.2
+
+# pipelines:
+#  - sarek
