--- a/modules/nf-core/bwamem2/index/environment.yml
+++ b/modules/nf-core/bwamem2/index/environment.yml
@@ -1,8 +1,8 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=bioconda/bwa-mem2
   - bioconda::bwa-mem2=2.2.1
-
-# pipelines:
-#  - sarek
