--- a/modules/nf-core/cnvkit/batch/environment.yml
+++ b/modules/nf-core/cnvkit/batch/environment.yml
@@ -1,13 +1,13 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 
 dependencies:
+  # renovate: datasource=conda depName=bioconda/cnvkit
   - bioconda::cnvkit=0.9.10
   # renovate: datasource=conda depName=bioconda/htslib
   - bioconda::htslib=1.17
   # renovate: datasource=conda depName=bioconda/samtools
   - bioconda::samtools=1.17
-
-# pipelines:
-#  - sarek
