--- a/modules/nf-core/samblaster/environment.yml
+++ b/modules/nf-core/samblaster/environment.yml
@@ -1,11 +1,13 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 
 dependencies:
+  # renovate: datasource=conda depName=bioconda/htslib
   - bioconda::htslib=1.19.1
+  # renovate: datasource=conda depName=bioconda/samblaster
   - bioconda::samblaster=0.1.26
+  # renovate: datasource=conda depName=bioconda/samtools
   - bioconda::samtools=1.19.2
-
-# pipelines:
-#  - sarek
