--- a/modules/nf-core/samtools/stats/environment.yml
+++ b/modules/nf-core/samtools/stats/environment.yml
@@ -4,8 +4,7 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=bioconda/htslib
   - bioconda::htslib=1.21
+  # renovate: datasource=conda depName=bioconda/samtools
   - bioconda::samtools=1.21
-
-# pipelines:
-#  - sarek
