--- a/modules/nf-core/bcftools/stats/environment.yml
+++ b/modules/nf-core/bcftools/stats/environment.yml
@@ -8,3 +8,6 @@ dependencies:
   - bioconda::bcftools=1.20
   # renovate: datasource=conda depName=bioconda/htslib
   - bioconda::htslib=1.20
+
+# pipelines:
+#  - sarek
