--- a/modules/nf-core/bwamem2/index/environment.yml
+++ b/modules/nf-core/bwamem2/index/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/bwa-mem2
   - bioconda::bwa-mem2=2.2.1
+
+# pipelines:
+#  - sarek
