--- a/modules/nf-core/cat/cat/environment.yml
+++ b/modules/nf-core/cat/cat/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=conda-forge/pigz
   - conda-forge::pigz=2.3.4
+
+# pipelines:
+#  - sarek
