--- a/modules/nf-core/cat/fastq/environment.yml
+++ b/modules/nf-core/cat/fastq/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=conda-forge/coreutils
   - conda-forge::coreutils=9.5
+
+# pipelines:
+#  - sarek
