--- a/modules/nf-core/cnvkit/antitarget/environment.yml
+++ b/modules/nf-core/cnvkit/antitarget/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/cnvkit
   - bioconda::cnvkit=0.9.11
+
+# pipelines:
+#  - sarek
