--- a/modules/nf-core/cnvkit/batch/environment.yml
+++ b/modules/nf-core/cnvkit/batch/environment.yml
@@ -11,3 +11,6 @@ dependencies:
   - bioconda::htslib=1.17
   # renovate: datasource=conda depName=bioconda/samtools
   - bioconda::samtools=1.17
+
+# pipelines:
+#  - sarek
