--- a/modules/nf-core/fastp/environment.yml
+++ b/modules/nf-core/fastp/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/fastp
   - bioconda::fastp=0.23.4
+
+# pipelines:
+#  - sarek
