--- a/modules/nf-core/fastqc/environment.yml
+++ b/modules/nf-core/fastqc/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/fastqc
   - bioconda::fastqc=0.12.1
+
+# pipelines:
+#  - sarek
