--- a/modules/nf-core/fgbio/callmolecularconsensusreads/environment.yml
+++ b/modules/nf-core/fgbio/callmolecularconsensusreads/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/fgbio
   - bioconda::fgbio=2.4.0
+
+# pipelines:
+#  - sarek
