--- a/modules/nf-core/gatk4spark/applybqsr/environment.yml
+++ b/modules/nf-core/gatk4spark/applybqsr/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/gatk4-spark
   - bioconda::gatk4-spark=4.6.1.0
+
+# pipelines:
+#  - sarek
