--- a/modules/nf-core/manta/germline/environment.yml
+++ b/modules/nf-core/manta/germline/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/manta
   - bioconda::manta=1.6.0
+
+# pipelines:
+#  - sarek
