--- a/modules/nf-core/msisensorpro/msisomatic/environment.yml
+++ b/modules/nf-core/msisensorpro/msisomatic/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/msisensor-pro
   - bioconda::msisensor-pro=1.2.0
+
+# pipelines:
+#  - sarek
