--- a/modules/nf-core/multiqc/environment.yml
+++ b/modules/nf-core/multiqc/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/multiqc
   - bioconda::multiqc=1.25.1
+
+# pipelines:
+#  - sarek
