--- a/modules/nf-core/ngscheckmate/ncm/environment.yml
+++ b/modules/nf-core/ngscheckmate/ncm/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/ngscheckmate
   - bioconda::ngscheckmate=1.0.1
+
+# pipelines:
+#  - sarek
