--- a/modules/nf-core/samblaster/environment.yml
+++ b/modules/nf-core/samblaster/environment.yml
@@ -11,3 +11,6 @@ dependencies:
   - bioconda::samblaster=0.1.26
   # renovate: datasource=conda depName=bioconda/samtools
   - bioconda::samtools=1.19.2
+
+# pipelines:
+#  - sarek
