--- a/modules/nf-core/strelka/germline/environment.yml
+++ b/modules/nf-core/strelka/germline/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/strelka
   - bioconda::strelka=2.9.10
+
+# pipelines:
+#  - sarek
