--- a/modules/nf-core/tabix/bgziptabix/environment.yml
+++ b/modules/nf-core/tabix/bgziptabix/environment.yml
@@ -9,3 +9,6 @@ dependencies:
   - bioconda::htslib=1.20
   # renovate: datasource=conda depName=bioconda/tabix
   - bioconda::tabix=1.11
+
+# pipelines:
+#  - sarek
