--- a/modules/nf-core/tiddit/sv/environment.yml
+++ b/modules/nf-core/tiddit/sv/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/tiddit
   - bioconda::tiddit=3.6.1
+
+# pipelines:
+#  - sarek
