--- a/modules/nf-core/unzip/environment.yml
+++ b/modules/nf-core/unzip/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=conda-forge/p7zip
   - conda-forge::p7zip=16.02
+
+# pipelines:
+#  - sarek
