--- a/modules/nf-core/vcftools/environment.yml
+++ b/modules/nf-core/vcftools/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/vcftools
   - bioconda::vcftools=0.1.16
+
+# pipelines:
+#  - sarek
