--- a/modules/nf-core/ascat/environment.yml
+++ b/modules/nf-core/ascat/environment.yml
@@ -8,3 +8,6 @@ dependencies:
   - bioconda::ascat=3.1.1
   # renovate: datasource=conda depName=bioconda/cancerit-allelecount
   - bioconda::cancerit-allelecount=4.3.0
+
+# pipelines:
+#  - sarek
