--- a/modules/nf-core/bcftools/concat/environment.yml
+++ b/modules/nf-core/bcftools/concat/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/bcftools
   - bioconda::bcftools=1.20
+
+# pipelines:
+#  - sarek
