--- a/modules/nf-core/controlfreec/makegraph2/environment.yml
+++ b/modules/nf-core/controlfreec/makegraph2/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/control-freec
   - bioconda::control-freec=11.6b
+
+# pipelines:
+#  - sarek
