--- a/modules/nf-core/dragmap/hashtable/environment.yml
+++ b/modules/nf-core/dragmap/hashtable/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/dragmap
   - bioconda::dragmap=1.3.0
+
+# pipelines:
+#  - sarek
