--- a/modules/nf-core/ensemblvep/vep/environment.yml
+++ b/modules/nf-core/ensemblvep/vep/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/ensembl-vep
   - bioconda::ensembl-vep=113.0
+
+# pipelines:
+#  - sarek
