--- a/modules/nf-core/freebayes/environment.yml
+++ b/modules/nf-core/freebayes/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/freebayes
   - bioconda::freebayes=1.3.6
+
+# pipelines:
+#  - sarek
