--- a/modules/nf-core/gawk/environment.yml
+++ b/modules/nf-core/gawk/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=conda-forge/gawk
   - conda-forge::gawk=5.3.0
+
+# pipelines:
+#  - sarek
