--- a/modules/nf-core/sentieon/dnamodelapply/environment.yml
+++ b/modules/nf-core/sentieon/dnamodelapply/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/sentieon
   - bioconda::sentieon=202308.03
+
+# pipelines:
+#  - sarek
