--- a/modules/nf-core/snpeff/snpeff/environment.yml
+++ b/modules/nf-core/snpeff/snpeff/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/snpeff
   - bioconda::snpeff=5.1
+
+# pipelines:
+#  - sarek
