--- a/modules/nf-core/spring/decompress/environment.yml
+++ b/modules/nf-core/spring/decompress/environment.yml
@@ -6,3 +6,6 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/spring
   - bioconda::spring=1.1.1
+
+# pipelines:
+#  - sarek
