--- a/modules/nf-core/untar/environment.yml
+++ b/modules/nf-core/untar/environment.yml
@@ -10,3 +10,6 @@ dependencies:
   - conda-forge::sed=4.8
   # renovate: datasource=conda depName=conda-forge/tar
   - conda-forge::tar=1.34
+
+# pipelines:
+#  - sarek
